fix layout shift

--- a/styles/fields/droparea.css
+++ b/styles/fields/droparea.css
@@ -1,6 +1,7 @@
 .dropzone
 {
-    border: 1px dashed var(--stroke-default);
+    border: 2px dashed transparent;
+    outline: 1px dashed var(--stroke-default);
     border-radius: 0.5rem;
 
     display: grid;
@@ -29,7 +30,8 @@
 
     &:hover, &:has(input:focus)
     {
-        border: 2px dashed var(--stroke-highlight);
+        outline-width: 0;
+        border-color: var(--stroke-highlight);
         background-color: var(--surface-secondary);
 
         & svg path
